﻿*2/14/2020 - Added URL Encoding Cleaner

New XML cleaner to decode XML that has been encoding with URL encoding such as "%3CCase+CaseID%3D".

*7/23/2019 - Republish to server

No new features.  Change the certificate so eXeMeL can be published again.  Looks like it will need to be reinstalled to get automatic updates again.

*9/13/2017 - Bug Fixes

Pressing ESC from the search field will now return control back to the editor.

*5/7/2017 - New Solarized Dark Themes

New application-wide Solarized Dark theme based on Ethan Schoonover's work. See http://ethanschoonover.com/solarized for more information.

New syntax highlighting scheme for the Solarized Dark theme. 

*5/10/2016 - New XPath Utility

New XPath Utility mode has been added.  Get to it by pressing the "Editor" button in the upper left, or press F2.

Search for elements using the XPath textbox at the top.  All elements that match the xpath will be highlighted as you type.

The xpath's starting element is highlighted, and the name is displayed to the right of the XPath textbox.

Right click an element for additional options:

- Select it as the new starting element for xpaths
- Expand / Collapse elements across the entire document
- Copy to the clipboard an xpath that starts at the root, or the starting element, to the current element

*4/28/2016 - New Editor Features

New option to highlight all instances of the currently selected text in the editor.

New hotkeys to fold/unfold specific levels of the XML.  Pressing ALT+1 now folds the first level of XML elements.  SHIFT+ALT+1 will unfold that same level.  ALT+2 folds the second level, and so on.

Thanks to Wei Yang for adding these features.

*4/5/2016 - Find and Editing Updates

When searching for text, information will display in the lower right as to what match you're on, and how many were found.  Pressing Escape while in the Find box will now cancel your search.

Added Copy, Cut, and Paste to the right-click context menu.
